--- a/app/partials/overview.html
+++ b/app/partials/overview.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+<div class="col-md-6">
+    <h2>Projects</h2>
+    <ul>
+        <!-- TODO: Use Angular ui.bootstrap module to add tooltips for followers and projects: http://angular-ui.github.io/bootstrap/ -->
+        <li ng-repeat="project in model.projects"><a href="#/project/{{project.shortname}}">{{ project.title }}</a> sponsored by
+            <a href="#/project/{{project.shortname}}">{{ project.owner }}</a> - {{project.followers.length}} follower<span ng-show="project.followers.length>1">s</span></li>
+    </ul>
+</div>
+<div class="col-md-6">
+    <h2>Users</h2>
+    <ul>
+        <li ng-repeat="user in model.users"><a href="#/user/{{user.username}}">{{ user.username }}</a> - following {{ user.interestedIn.length }}<span ng-show="user.memberOf.length">, member of {{ user.memberOf.length }}</span></li>
+    </ul>
+</div>
