Added test webserver, updated views, added more dummy data
Data is now located in the test/json directory. The test webserver can be
run with node. Services use load method to read from the json files, and
controllers use promises through $q to load data.

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -28,3 +28,14 @@
   content: "";
   padding: 0;
 }
+
+.nav>li>a.login {
+    font-weight: bold;
+    padding: 9px 15px !important;
+    border: 1px solid #428bca;
+}
+
+.nav>li>a.login:hover {
+    background-color: #428bca;
+    color: #ffffff;
+}
