--- a/app/partials/overview.html
+++ b/app/partials/overview.html
@@ -1,14 +1,26 @@
-<div class="col-md-6">
-    <h2>Projects</h2>
-    <ul>
-        <!-- TODO: Use Angular ui.bootstrap module to add tooltips for followers and projects: http://angular-ui.github.io/bootstrap/ -->
-        <li ng-repeat="project in model.projects"><a href="#/project/{{project.shortname}}">{{ project.title }}</a> sponsored by
-            <a href="#/project/{{project.shortname}}">{{ project.owner }}</a> - {{project.followers.length}} follower<span ng-show="project.followers.length>1">s</span></li>
-    </ul>
-</div>
-<div class="col-md-6">
-    <h2>Users</h2>
-    <ul>
-        <li ng-repeat="user in model.users"><a href="#/user/{{user.username}}">{{ user.username }}</a> - following {{ user.interestedIn.length }}<span ng-show="user.memberOf.length">, member of {{ user.memberOf.length }}</span></li>
-    </ul>
+<div class="row">
+    <div class="col-sm-6">
+        <h2>Top Projects</h2>
+        <ul>
+            <!-- TODO: Use Angular ui.bootstrap module to add tooltips for followers and projects: http://angular-ui.github.io/bootstrap/ -->
+            <li ng-repeat="project in model.projects | orderBy: 'project.followers.length':true | limitTo: 5"><a href="#/project/{{project.shortname}}">{{ project.title }}</a>
+                sponsored by
+                <a href="#/project/{{project.shortname}}">{{ project.owner }}</a> - {{project.followers.length}}
+                follower<span ng-show="project.followers.length>1">s</span></li>
+        </ul>
+        <p><a href="#/projects">All Projects &#187;</a></p>
+    </div>
+    <div class="col-sm-6">
+        <h2>Top Users</h2>
+        <ul>
+            <li ng-repeat="user in model.users | orderBy: ['memberOf.length', 'interestedIn.length']:true | limitTo: 5">
+                <a href="#/user/{{user.username}}">{{ user.username }}</a>
+                <span ng-show="user.interestedIn.length || user.memberOf.length"> - </span>
+                <span ng-show="user.interestedIn.length">following {{ user.interestedIn.length }}</span>
+                <span ng-show="user.memberOf.length && user.interestedIn.length">,</span>
+                <span ng-show="user.memberOf.length">member of {{ user.memberOf.length }}</span>
+            </li>
+        </ul>
+        <p><a href="#/users">All Users &#187;</a></p>
+    </div>
 </div>
