--- a/app/partials/edituser.html
+++ b/app/partials/edituser.html
@@ -1,5 +1,5 @@
 <div class="col-md-6 col-md-offset-3">
-    <h2>New User</h2>
+    <h2>Edit User</h2>
     <form>
         <div class="form-group">
             <label for="username">Username:</label>
@@ -21,6 +21,6 @@
             <input type="text" class="form-control" id="lastname" ng-model="user.lastName"/>
         </div>
 
-        <button class="btn btn-primary" ng-click="addUser()" type="submit">Create</button>
+        <button class="btn btn-primary" ng-click="editUser()" type="submit">Save</button>
     </form>
 </div>
