--- a/app/partials/login.html
+++ b/app/partials/login.html
@@ -1,12 +1,15 @@
 <div class="col-md-6 col-md-offset-3">
-    <div class="form-group">
-        <label for="username">Username:</label>
-        <input type="text" class="form-control" id="username" ng-model="user.username"/>
-    </div>
+    <h2>Login</h2>
+    <form>
+        <div class="form-group">
+            <label for="username">Username:</label>
+            <input type="text" class="form-control" id="username" ng-model="user.username"/>
+        </div>
 
-    <div class="form-group">
-        <label for="email">Email:</label>
-        <input type="email" class="form-control" id="email" ng-model="user.email"/>
-    </div>
-    <button class="btn btn-primary" ng-click="login()">Log In</button>
+        <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" class="form-control" id="email" ng-model="user.email"/>
+        </div>
+        <button type="submit" class="btn btn-primary" ng-click="login()">Log In</button>
+    </form>
 </div>
