--- a/app/partials/user.html
+++ b/app/partials/user.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-sm-12">
+    <div class="col-sm-11">
         <h2>{{ user.username }}</h2>
 
         <h3 style="color: #666666; margin: .5em 0 1.25em;" ng-show="user.firstName && user.lastName"><em>{{
@@ -9,6 +9,9 @@
         <h3>Email:</h3>
 
         <p><a href="mailto:{{user.email}}">{{ user.email }}</a></p>
+    </div>
+    <div class="col-sm-1">
+        <a href="#/edit/user/{{user.username}}" class="btn btn-default" ng-show="user.username === currentUser">Edit</a>
     </div>
 
     <div class="col-sm-4"><h3>Owner of:</h3>
