--- a/app/partials/edituser.html
+++ b/app/partials/edituser.html
@@ -3,7 +3,7 @@
     <form>
         <div class="form-group">
             <label for="username">Username:</label>
-            <input type="text" class="form-control" id="username" ng-model="user.username"/>
+            <input type="text" class="form-control" id="username" ng-model="user.username" disabled />
         </div>
 
         <div class="form-group">
