--- a/app/partials/user.html
+++ b/app/partials/user.html
@@ -2,19 +2,35 @@
     <div class="col-sm-11">
         <h2>{{ user.username }}</h2>
 
-        <h3 style="color: #666666; margin: .5em 0 1.25em;" ng-show="user.firstName && user.lastName"><em>{{
+        <h3 style="color: #666666; margin: .5em 0 .75em;" ng-show="user.firstName && user.lastName"><em>{{
             user.firstName +
             ' ' + user.lastName}}</em></h3>
 
-        <h3>Email:</h3>
-
-        <p><a href="mailto:{{user.email}}">{{ user.email }}</a></p>
     </div>
     <div class="col-sm-1">
         <a href="#/edit/user/{{user.username}}" class="btn btn-default" ng-show="user.username === currentUser">Edit</a>
     </div>
 
-    <div class="col-sm-4"><h3>Owner of:</h3>
+    <div class="col-md-9 col-sm-8">
+
+        <h3>Email</h3>
+        <p><a href="mailto:{{user.email}}">{{ user.email }}</a></p>
+
+        <h3 style="margin-bottom: 15px;">Recent Comments</h3>
+        <div>
+            <div ng-repeat="comment in userComments | orderBy: 'date':true">
+                <h4><strong>{{comment.title}}</strong></h4>
+                <p>{{comment.body}}</p>
+                <p><a href="#/user/{{comment.author}}">{{comment.author}}</a> in <a href="#/project/{{comment.shortname}}">{{ comment.projectTitle }}</a> on {{comment.date}}</p>
+                <hr/>
+            </div>
+        </div>
+        <p ng-show="!userComments || userComments.length === 0">{{ user.username }} has not left any comments.</p>
+    </div>
+
+    <div class="col-md-3 col-sm-4">
+    <div>
+        <h3>Owner of:</h3>
 
         <div ng-show="user.ownerOf.length">
             <ul>
@@ -24,7 +40,7 @@
         <p ng-show="!user.ownerOf.length">{{ user.username }} does not own any projects</p>
     </div>
 
-    <div class="col-sm-4">
+    <div>
         <h3>Member of:</h3>
 
         <div ng-show="user.memberOf">
@@ -35,7 +51,7 @@
         <p ng-show="!user.memberOf">{{ user.username }} is not a member of any projects</p>
     </div>
 
-    <div class="col-sm-4">
+    <div>
         <h3>Following:</h3>
 
         <div ng-show="user.interestedIn">
@@ -45,18 +61,7 @@
         </div>
         <p ng-show="!user.interestedIn">{{ user.username }} is not following any projects</p>
     </div>
-
-    <div class="col-sm-8">
-        <h3>Recent Comments</h3>
-        <div>
-            <div ng-repeat="comment in userComments | orderBy: comment.date">
-                <h4><strong>{{comment.title}}</strong></h4>
-                <p>{{comment.body}}</p>
-                <p><a href="#/user/{{comment.author}}">{{comment.author}}</a> in <a href="#/project/{{comment.shortname}}">{{ comment.projectTitle }}</a> on {{comment.date}}</p>
-                <hr/>
-            </div>
-        </div>
-        <p ng-show="!userComments || userComments.length === 0">{{ user.username }} has not left any comments.</p>
     </div>
+
 
 </div>
