--- a/app/partials/project.html
+++ b/app/partials/project.html
@@ -22,27 +22,35 @@
 </div>
 
 <div class="row">
-    <div class="col-md-9 col-sm-8">
+    <div class="col-lg-10 col-md-9 col-xs-8">
         <div>
             <h3>Description</h3>
             <p>{{ project.description }}</p>
         </div>
         <h3>Comments</h3>
+
         <p ng-show="project.comments == null || project.comments.length == 0">There are no comments yet. <a href="#/project/{{project.shortname}}/addcomment" ng-show="currentUser !== ''">Leave one?</a></p>
         <div ng-repeat="comment in project.comments | orderBy: 'date':true">
-            <h4><strong>{{comment.title}}</strong></h4>
+
+            <div class="row">
+                <div class="col-xs-11">
+                    <h4><strong>{{comment.title}}</strong></h4>
+                </div>
+                <div class="col-xs-1">
+                    <a class="btn btn-default btn-sm" style="margin-top: 9px;" href="" ng-show="currentUser === comment.author" ng-click="deleteComment(comment.date, project.shortname)">Delete</a>
+                </div>
+            </div>
+
 
             <p>{{comment.body}}</p>
 
             <p><a href="#/user/{{comment.author}}">{{comment.author}}</a> on {{comment.date}}</p>
-            <a class="btn btn-default btn-sm" href="" ng-show="currentUser === comment.author"
-               ng-click="deleteComment(comment.date, project.shortname)">Delete</a>
             <hr/>
         </div>
     </div>
 
 
-    <div class="col-md-3 col-md-4">
+    <div class="col-lg-2 col-md-3 col-xs-4">
         <div>
             <h3>Owner</h3>
             <ul ng-show="project.owner">
