--- a/app/partials/project.html
+++ b/app/partials/project.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-sm-6">
         <h2>{{ project.title }}</h2>
 
         <h3 style="color: #666666; margin: .5em 0 .75em;"><em>{{ project.shortname }}</em></h3>
@@ -22,7 +22,7 @@
 </div>
 
 <div class="row">
-    <div class="col-lg-10 col-md-9 col-xs-8">
+    <div class="col-lg-8 col-md-9 col-sm-8">
         <div>
             <h3>Description</h3>
             <p>{{ project.description }}</p>
@@ -50,7 +50,7 @@
     </div>
 
 
-    <div class="col-lg-2 col-md-3 col-xs-4">
+    <div class="col-lg-3 col-lg-offset-1 col-md-3 col-sm-4">
         <div>
             <h3>Owner</h3>
             <ul ng-show="project.owner">
