Update login error message

--- a/app/partials/login.html
+++ b/app/partials/login.html
@@ -13,7 +13,7 @@
         <button type="submit" class="btn btn-primary" ng-click="login()">Log In</button>
     </form>
     <br/>
-    <div class="alert alert-danger" ng-show="invalid">
-        <p>Username or email is incorrect.</p>
+    <div class="alert alert-danger" ng-show="error">
+        <p>{{error}}</p>
     </div>
 </div>
