--- a/app/partials/newuser.html
+++ b/app/partials/newuser.html
@@ -21,6 +21,11 @@
             <input type="text" class="form-control" id="lastname" ng-model="user.lastName"/>
         </div>
 
+        <div class="form-group">
+            <label for="picture">Picture (url):</label>
+            <input type="text" class="form-control" id="picture" ng-model="user.picture"/>
+        </div>
+
         <button class="btn btn-primary" ng-click="addUser()" type="submit">Create</button>
     </form>
 </div>
