--- a/app/partials/user.html
+++ b/app/partials/user.html
@@ -2,10 +2,11 @@
     <div class="col-sm-11">
         <h2>{{ user.username }}</h2>
 
-        <h3 style="color: #666666; margin: .5em 0 .75em;" ng-show="user.firstName && user.lastName"><em>{{
+        <h3 style="color: #666666; margin: .5em 0 .5em" ng-show="user.firstName && user.lastName"><em>{{
             user.firstName +
             ' ' + user.lastName}}</em></h3>
 
+        <p><a href="mailto:{{user.email}}">{{ user.email }}</a></p>
     </div>
     <div class="col-sm-1" style="padding-top: 30px;">
         <a href="#/edit/user/{{user.username}}" class="btn btn-default" ng-show="user.username === currentUser">Edit</a>
@@ -13,8 +14,9 @@
 
     <div class="col-lg-8 col-md-9 col-sm-8">
 
-        <h3>Email</h3>
-        <p><a href="mailto:{{user.email}}">{{ user.email }}</a></p>
+        <div ng-show="user.picture" class="thumbnail" style="display: inline-block; margin: 0; height: 200px; width: 200px; background-image: url({{user.picture}}); background-position: center; background-size: cover;">
+
+        </div>
 
         <h3 style="margin-bottom: 15px;">Recent Comments</h3>
         <div>
